--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "songs",
   "version": "0.1.0",
+  "homepage" : "http://ssuchir.github.io/React-redux-songs",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
